@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.92 2005/03/21 04:52:48 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.93 2005/03/21 22:33:25 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Changed chroot wrapper code in spawn() to write the wrapper the python way
+  instead of the bash way to avoid quote conflicts.
 
   20 Mar 2005; Preston Cody <codeman@gentoo.org>
   Added the amd64ArchitectureTemplate, mostly a copy of x86 without lilo.
@@ -10,7 +14,7 @@
   20 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added _get_packages_to_emerge() to GLIArchitectureTemplate and calls in
   stage1() and stage2(). Added 'origminor' parameter to GLIStorageDevice and
-  GLIInstallProfile
+  GLIInstallProfile.
 
   19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Fixed a couple bugs in add_netmount() in GLIInstallProfile. spawn() outputs
